Fix: Solved Marker Animation, Side Menu Overflow, Async Google Map, Ajax Error Handling, Two Way Bindings
	1. Marker/list item when clicks add animation effect to it.
	2. Side Menu List Scrollable on modile landscape mode by using Overflow propertyon lower devices.
	3. Google Map Load Asynchronously and automatically calls initMap on load.
	4. Google Map and Wikipedia implement error handling.
	5. Using Knockout Two Way Data binding for changing menu state and active state on list items.

Issue Resolved: https://review.udacity.com/#!/reviews/136006

Version: 1.0 First Release

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ h2 {
     transform: translate3d(0, 0, 0);
     transition: transform 0.2s;
     z-index: 1;
+    overflow: auto;
 }
 
 .menu-hidden .slide-menu {
@@ -75,7 +76,7 @@ h2 {
     margin: 0.5em 0;
 }
 
-#map {
+.map {
     position:fixed !important;
     position:absolute;
     top: 3.5em;
